--- a/PhenoPad/CustomControl/NotePageControl.xaml
+++ b/PhenoPad/CustomControl/NotePageControl.xaml
@@ -294,7 +294,7 @@
                             <Storyboard x:Name="curWordPhenoAnimation">
                                 <RepositionThemeAnimation 
                                         Storyboard.TargetName="curWordPhenoControlGrid"
-                                        FromVerticalOffset="100"
+                                        FromVerticalOffset="120"
                                          Duration="0:0:0.1"/>
                             </Storyboard>
                             <Storyboard x:Name="curWordPhenoHideAnimation">
@@ -316,6 +316,7 @@
                                       ScrollViewer.HorizontalScrollMode="Enabled"
                                       ScrollViewer.VerticalScrollMode="Disabled"
                                       ScrollViewer.HorizontalScrollBarVisibility="Hidden"
+                                      ScrollViewer.VerticalScrollBarVisibility="Hidden"
                                       ScrollViewer.IsHorizontalRailEnabled="True"
                                       x:Name="curLineCandidatePhenoListView" ItemsSource="{x:Bind curLineCandidatePheno, Mode=OneWay}">
                                 <ListView.ItemsPanel>
@@ -381,7 +382,9 @@
                         <StackPanel Orientation="Horizontal" Background="WhiteSmoke" CornerRadius="10" 
                                     BorderThickness="1" BorderBrush="DarkGray">
                             <!-- recongtion result of current line -->
-                            <StackPanel Name="curLineWordsStackPanel" Orientation="Horizontal" Spacing="5" Padding="5 0 5 0" />
+                            <ProgressRing x:Name="loading" IsActive="True" Margin="10 0 10 0" Visibility="Collapsed"/>
+                            <StackPanel Name="curLineWordsStackPanel" Orientation="Horizontal" Spacing="5" HorizontalAlignment="Left"
+                                        Height="45" Padding="5 0 5 0" />
                             
                             <ListView Visibility="Collapsed" Padding="5 0 0 0" Height="40"
                               ScrollViewer.HorizontalScrollMode="Enabled"
@@ -413,8 +416,8 @@
                                 </ListView.ItemContainerStyle>
                             </ListView>
                             <Button Background="WhiteSmoke" Foreground="PaleVioletRed" Width="{x:Bind LINE_HEIGHT}" 
-                                    Height="40" Click="curLineResultButtonClick" Style="{StaticResource ButtonStyle1}"
-                                    HorizontalAlignment="Right">
+                                    Height="45" Click="curLineResultButtonClick" Style="{StaticResource ButtonStyle1}"
+                                    RelativePanel.AlignRightWithPanel="True">
                                 <SymbolIcon Symbol="Clear"/>
                             </Button>
                         </StackPanel>
