--- a/PhenoPad/CustomControl/AddInControl.xaml
+++ b/PhenoPad/CustomControl/AddInControl.xaml
@@ -18,7 +18,7 @@
         <ResourceDictionary>
             <x:Double x:Key="categoryButtonHeight">60</x:Double>
             <x:Double x:Key="categoryButtonFontSize">27</x:Double>
-            
+
             <Storyboard x:Name="addinPanelHideAnimation">
                 <DoubleAnimation Storyboard.TargetName="addinSlide" 
                                  Storyboard.TargetProperty="X"
@@ -27,8 +27,16 @@
                         <CircleEase EasingMode="EaseOut" />
                     </DoubleAnimation.EasingFunction>
                 </DoubleAnimation>
+                <DoubleAnimation Storyboard.TargetName="OutlineGrid" 
+                                 Storyboard.TargetProperty="Opacity"
+                                 From="1.0" To="0.0"
+                                 Duration="0:0:0.5">
+                    <DoubleAnimation.EasingFunction>
+                        <CircleEase EasingMode="EaseOut" />
+                    </DoubleAnimation.EasingFunction>
+                </DoubleAnimation>
             </Storyboard>
-            
+
             <Storyboard x:Name="addinPanelShowAnimation">
                 <DoubleAnimation Storyboard.TargetName="addinSlide" 
                                  Storyboard.TargetProperty="X"
@@ -46,17 +54,15 @@
                     </DoubleAnimation.EasingFunction>
                 </DoubleAnimation>
             </Storyboard>
-            
+
         </ResourceDictionary>
     </UserControl.Resources>
 
     <Grid Background="WhiteSmoke" BorderBrush="LightGray" Name="OutlineGrid" Opacity="1">
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="20"></RowDefinition>
             <RowDefinition Height="48"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="20"></RowDefinition>
         </Grid.RowDefinitions>
 
         <Grid.RenderTransform>
@@ -64,9 +70,9 @@
         </Grid.RenderTransform>
 
 
-        <Grid Name="contentGrid" Grid.Row="2">
+        <Grid Name="contentGrid" Grid.Row="1">
             <!--<local:AddInImageControl Canvas.ZIndex="1" Visibility="Collapsed" x:Name="imageControl"/>-->
-            <ScrollViewer Canvas.ZIndex="2" Grid.Row="2" x:Name="scrollViewer" Visibility="Collapsed" ZoomMode="Enabled" 
+            <ScrollViewer Canvas.ZIndex="2" Grid.Row="1" x:Name="scrollViewer" Visibility="Collapsed" ZoomMode="Enabled" 
                               MinZoomFactor="1" VerticalScrollMode="Enabled" 
                               VerticalScrollBarVisibility="Auto" 
                               HorizontalScrollMode="Enabled" 
@@ -79,7 +85,7 @@
             </ScrollViewer>
         </Grid>
 
-        <Grid Name="categoryGrid"  Grid.Row="2">
+        <Grid Name="categoryGrid"  Grid.Row="1">
 
             <StackPanel Name="SelectionStackPanel"  Width="200"  HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Button Background="Transparent" Style="{StaticResource MyButtonStyle}" HorizontalAlignment="Stretch" Click="DrawingButton_Click"  Name="DrawingButton" Height="{StaticResource categoryButtonHeight}">
@@ -96,49 +102,107 @@
 
 
 
-        <RelativePanel Grid.Row="1" Name="TitleRelativePanel" Visibility="Visible" Background="WhiteSmoke">
+        <RelativePanel Grid.Row="0" Name="TitleRelativePanel" Visibility="Visible" Background="WhiteSmoke">
             <Button Style="{StaticResource MyButtonStyle}" Background="Transparent" Foreground="Gray" Height="35" VerticalAlignment="Top" Width="35" Padding="0" Name="deleteButton" Click="Delete_Click" Margin="6,6,-6,-6">
                 <SymbolIcon Symbol="Clear" Height="35" Width="35" Margin="-1,-1,-3,-3" HorizontalAlignment="Left"></SymbolIcon>
             </Button>
-            <Button Style="{StaticResource MyButtonStyle}" Background="Transparent" Foreground="Gray" Height="35" VerticalAlignment="Top" Width="35" Padding="0" Name="minimizeButton" Click="Minimize_Click" Margin="60,6,-6,-6">
+            <Button Style="{StaticResource MyButtonStyle}" Background="Transparent" Foreground="Gray" Height="35" VerticalAlignment="Top" Width="35" Padding="0" Name="minimizeButton" Click="Minimize_Click" Margin="50,6,-6,-6">
                 <SymbolIcon Symbol="Remove" Height="35" Width="35" Margin="-1,-1,-3,-3" HorizontalAlignment="Left"></SymbolIcon>
             </Button>
+            <Button Style="{StaticResource ButtonStyle1}" Background="Transparent" Foreground="Gray" VerticalAlignment="Top" 
+                    RelativePanel.AlignRightWithPanel="True"
+                    Width="48" Height="48" Padding="0" Name="manipulateButton" 
+                    Click="showMovingGrid" Holding="manipulateButton_Holding"
+                    ManipulationMode="TranslateX,TranslateY"
+                    ManipulationStarted="Moving_Started"
+                    ManipulationDelta="Moving_Delta"
+                    ManipulationCompleted="Moving_Completed">
+                <Grid>
+                        <SymbolIcon Symbol="FullScreen" Width="40" Height="40" RenderTransformOrigin="0.5,0.5" >
+                        <SymbolIcon.RenderTransform>
+                            <CompositeTransform Rotation="-45"/>
+                        </SymbolIcon.RenderTransform>
+                    </SymbolIcon>
+                    <SymbolIcon Symbol="FullScreen" Width="40" Height="40" RenderTransformOrigin="0.5,0.5" >
+                        <SymbolIcon.RenderTransform>
+                            <CompositeTransform Rotation="-135"/>
+                        </SymbolIcon.RenderTransform>
+                    </SymbolIcon>
+                </Grid>
+
+            </Button>
         </RelativePanel>
-        
-        <InkToolbar x:Name="inkToolbar" Background="LightGray" Visibility="Collapsed"  Grid.Row="1" 
-        VerticalAlignment="Center" 
+
+        <InkToolbar x:Name="inkToolbar" Background="LightGray"   Grid.Row="0" 
+        VerticalAlignment="Center" Margin="0 0 48 0" Visibility="Collapsed"
         HorizontalAlignment="Right" 
         Orientation="Horizontal"   />
-        
+
         <Button Height="30" Width="40" Name="PhotoButton" 
                 Click="PhotoButton_Click" Foreground="Black" Background="WhiteSmoke" 
-                Grid.Row="1"  HorizontalAlignment="Right" Visibility="Collapsed" 
+                Grid.Row="0"  HorizontalAlignment="Right" Visibility="Collapsed" 
                 Margin="0 0 20 0">
             <SymbolIcon Symbol="Camera" />
         </Button>
-        
+
         <!-- Photo service -->
-        <Grid Background="WhiteSmoke" Grid.Row="2"
+        <Grid Background="WhiteSmoke" Grid.Row="1"
               Name="CameraCanvas"
               RelativePanel.AlignRightWithPanel="True" Visibility="Collapsed">
             <photovideoservice:PhotoVideoCaptureControl x:Name="captureControl"></photovideoservice:PhotoVideoCaptureControl>
         </Grid>
-        
 
+        <Grid Grid.Row="0" Grid.RowSpan="2" Background="White" Opacity="0.9"  
+              Name="MovingGrid" Visibility="Collapsed"
+              Tapped="noImageManipulation_Tapped"
+              ManipulationMode="TranslateX,TranslateY"
+              ManipulationStarted="AddInManipulate_Started" 
+              ManipulationDelta="AddInManipulate_Delta" 
+              ManipulationCompleted="AddInManipulate_Completed">
+            <TextBlock Text="Resizing Mode" FontWeight="Bold" FontSize="24" VerticalAlignment="Center"  HorizontalAlignment="Center"
+                       Opacity="0.3"/>
+            <Grid Name="noImageManipulation">
+                <SymbolIcon Name="leftA" Margin="10" Symbol="Back" VerticalAlignment="Center" HorizontalAlignment="Left" />
+                <SymbolIcon Name="rightA" Margin="10" Symbol="Back" VerticalAlignment="Center" HorizontalAlignment="Right" RenderTransformOrigin="0.5,0.488">
+                    <SymbolIcon.RenderTransform>
+                        <CompositeTransform Rotation="180"/>
+                    </SymbolIcon.RenderTransform>
+                </SymbolIcon>
+                <SymbolIcon Name="topA" Margin="10" Symbol="Back" VerticalAlignment="Top" HorizontalAlignment="Center" RenderTransformOrigin="0.5,0.488">
+                    <SymbolIcon.RenderTransform>
+                        <CompositeTransform Rotation="90"/>
+                    </SymbolIcon.RenderTransform>
+                </SymbolIcon>
+                <SymbolIcon Name="bottomA" Margin="10" Symbol="Back" VerticalAlignment="Bottom" HorizontalAlignment="Center" RenderTransformOrigin="0.5,0.488">
+                    <SymbolIcon.RenderTransform>
+                        <CompositeTransform Rotation="270"/>
+                    </SymbolIcon.RenderTransform>
+                </SymbolIcon>
+                <SymbolIcon Name="tlA" Margin="10" Symbol="Back" VerticalAlignment="Top" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.488">
+                    <SymbolIcon.RenderTransform>
+                        <CompositeTransform Rotation="45"/>
+                    </SymbolIcon.RenderTransform>
+                </SymbolIcon>
+                <SymbolIcon Name="trA" Margin="10" Symbol="Back" VerticalAlignment="Top" HorizontalAlignment="Right" RenderTransformOrigin="0.5,0.488">
+                    <SymbolIcon.RenderTransform>
+                        <CompositeTransform Rotation="135"/>
+                    </SymbolIcon.RenderTransform>
+                </SymbolIcon>
+                <SymbolIcon Name="blA" Margin="10" Symbol="Back" VerticalAlignment="Bottom" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.488">
+                    <SymbolIcon.RenderTransform>
+                        <CompositeTransform Rotation="-45"/>
+                    </SymbolIcon.RenderTransform>
+                </SymbolIcon>
+                <SymbolIcon Name="brA" Margin="10" Symbol="Back" VerticalAlignment="Bottom" HorizontalAlignment="Right" RenderTransformOrigin="0.5,0.488">
+                    <SymbolIcon.RenderTransform>
+                        <CompositeTransform Rotation="-135"/>
+                    </SymbolIcon.RenderTransform>
+                </SymbolIcon>
+            </Grid>
 
-        <Grid Grid.Row="0" Grid.RowSpan="4" Background="White" Opacity="0.5"  
-              Name="MovingGrid" Visibility="Collapsed">
         </Grid>
-        <Button Grid.Row="3" HorizontalAlignment="Right" Height="20"
-                    VerticalAlignment="Center" Holding="ResizeButtonOnHolding">
-            <!--<SymbolIcon  Symbol="FullScreen" 
-                    Name="resizeIcon" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <SymbolIcon.RenderTransform>
-                    <CompositeTransform Rotation="90" ScaleX="0.7" ScaleY="0.7"/>
 
-                </SymbolIcon.RenderTransform>
-            </SymbolIcon>-->
-        </Button>
+
 
     </Grid>
 </UserControl>
