--- a/PhenoPad/CustomControl/PhenotypeControl.xaml
+++ b/PhenoPad/CustomControl/PhenotypeControl.xaml
@@ -30,13 +30,15 @@
                 --><!--<FadeInThemeAnimation Storyboard.TargetName="YNSwitch" Duration="0:0:0.1" />--><!--
             </Storyboard>-->
         </Grid.Resources>
+        
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="50"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="50"/>
         </Grid.ColumnDefinitions>
 
-        <Button x:Name="AddBtn" Padding="0" Background="{x:Null}" Grid.Column="0"  Click="AddBtn_Click" Width="50" MinWidth="50" MinHeight="25" Height="25">
+        <Button x:Name="AddBtn" Padding="0" Background="{x:Null}" Grid.Column="0"  
+                Click="AddBtn_Click" Width="50" MinWidth="50" MinHeight="25" Height="25">
             <SymbolIcon Symbol="Add"/>
         </Button>
 
@@ -54,8 +56,10 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Button Style="{StaticResource MyButtonStyle}" Padding="0" Content="Y"  Name="YSwitchBtn" Click="YSwitchBtn_Click"  Grid.Column="0" Width="25" Height="25"></Button>
-            <Button Style="{StaticResource MyButtonStyle}" Padding="0" Content="N" Name="NSwitchBtn"   Click="NSwitchBtn_Click" Opacity="1.0" Grid.Column="1" Width="25" Height="25"></Button>
+            <Button Style="{StaticResource MyButtonStyle}" Padding="0" Content="Y"  Name="YSwitchBtn" 
+                    Click="YSwitchBtn_Click"  Grid.Column="0" Width="25" Height="25"></Button>
+            <Button Style="{StaticResource MyButtonStyle}" Padding="0" Content="N" Name="NSwitchBtn"   
+                    Click="NSwitchBtn_Click" Opacity="1.0" Grid.Column="1" Width="25" Height="25"></Button>
         </Grid>
 
         <Grid Padding="0 0 0 0" Tapped="NameGrid_Tapped" Name="NameGrid" Grid.Column="1">
@@ -65,7 +69,11 @@
                         <TextBlock  x:Name="phenotypeNameTextBlockTooltip" Text="" VerticalAlignment="Center"></TextBlock>
                     </ToolTipService.ToolTip>
                 </TextBlock>
-                <Line RelativePanel.AlignVerticalCenterWith="phenotypeNameTextBlock" RelativePanel.AlignLeftWith="phenotypeNameTextBlock" RelativePanel.AlignRightWith="phenotypeNameTextBlock" Stretch="Fill" Stroke="{StaticResource Light_Red}" StrokeThickness="2" X1="1" Y1="0" HorizontalAlignment="Stretch" VerticalAlignment="Center" Name="NameCrossLine" Visibility="Collapsed"/>
+                <Line RelativePanel.AlignVerticalCenterWith="phenotypeNameTextBlock" 
+                      RelativePanel.AlignLeftWith="phenotypeNameTextBlock" 
+                      RelativePanel.AlignRightWith="phenotypeNameTextBlock" Stretch="Fill" 
+                      Stroke="{StaticResource Light_Red}" StrokeThickness="2" X1="1" Y1="0" HorizontalAlignment="Stretch" 
+                      VerticalAlignment="Center" Name="NameCrossLine" Visibility="Collapsed"/>
                 
             </RelativePanel>
             
@@ -75,7 +83,8 @@
             <Button Background="Transparent" Style="{StaticResource MyButtonStyle}" RelativePanel.AlignRightWithPanel="True" x:Name="DetailButton"  Grid.Column="2" Foreground="Gray" Click="DetailButton_Click" Width="25" MinWidth="25" MinHeight="25" Height="25" Padding="0">
                 <SymbolIcon Symbol="More"/>
             </Button>
-            <Button x:Name="DeleteBtn"   Background="{x:Null}" Foreground="LightCoral" Click="DeleteBtn_Click" Width="25" MinWidth="25" MinHeight="25" Height="25" Padding="0">
+            <Button x:Name="DeleteBtn"   Background="{x:Null}" Foreground="LightCoral" Click="DeleteBtn_Click" Width="25" 
+                    MinWidth="25" MinHeight="25" Height="25" Padding="0">
                 <SymbolIcon Symbol="Delete"/>
             </Button>
         </StackPanel>
