--- a/PhenoPad/CustomControl/AddInControl.xaml
+++ b/PhenoPad/CustomControl/AddInControl.xaml
@@ -103,13 +103,15 @@
 
 
         <RelativePanel Grid.Row="0" Name="TitleRelativePanel" Visibility="Visible" Background="WhiteSmoke">
-            <Button Style="{StaticResource MyButtonStyle}" Background="Transparent" Foreground="Gray" Height="35" VerticalAlignment="Top" Width="35" Padding="0" Name="deleteButton" Click="Delete_Click" Margin="6,6,-6,-6">
+            <Button Style="{StaticResource MyButtonStyle}" Background="Transparent" Foreground="Gray" 
+                    Height="48" VerticalAlignment="Top" Width="48" Padding="0" Name="deleteButton" Click="Delete_Click" Margin="0">
                 <SymbolIcon Symbol="Clear" Height="35" Width="35" Margin="-1,-1,-3,-3" HorizontalAlignment="Left"></SymbolIcon>
             </Button>
-            <Button Style="{StaticResource MyButtonStyle}" Background="Transparent" Foreground="Gray" Height="35" VerticalAlignment="Top" Width="35" Padding="0" Name="minimizeButton" Click="Minimize_Click" Margin="50,6,-6,-6">
+            <Button Style="{StaticResource MyButtonStyle}" Background="Transparent" Foreground="Gray" Height="48" 
+                    VerticalAlignment="Top" Width="48" Padding="0" Name="minimizeButton" Click="Minimize_Click" Margin="50,0,0,0">
                 <SymbolIcon Symbol="Remove" Height="35" Width="35" Margin="-1,-1,-3,-3" HorizontalAlignment="Left"></SymbolIcon>
             </Button>
-            <Button Style="{StaticResource ButtonStyle1}" Background="Transparent" Foreground="Gray" VerticalAlignment="Top" 
+            <Button Style="{StaticResource MyButtonStyle}" Background="Transparent" Foreground="Gray" VerticalAlignment="Top" 
                     RelativePanel.AlignRightWithPanel="True"
                     Width="48" Height="48" Padding="0" Name="manipulateButton" 
                     Click="showMovingGrid" Holding="manipulateButton_Holding"
@@ -138,10 +140,10 @@
         HorizontalAlignment="Right" 
         Orientation="Horizontal"   />
 
-        <Button Height="30" Width="40" Name="PhotoButton" 
+        <Button Height="48" Width="48" Name="PhotoButton" Style="{StaticResource MyButtonStyle}"
                 Click="PhotoButton_Click" Foreground="Black" Background="WhiteSmoke" 
                 Grid.Row="0"  HorizontalAlignment="Right" Visibility="Collapsed" 
-                Margin="0 0 20 0">
+                Margin="0 0 48 0"> 
             <SymbolIcon Symbol="Camera" />
         </Button>
 
