--- a/PhenoPad/CustomControl/NotePageControl.xaml
+++ b/PhenoPad/CustomControl/NotePageControl.xaml
@@ -7,8 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:customcontrol="using:PhenoPad.CustomControl"
     xmlns:phenotypeservice="using:PhenoPad.PhenotypeService"
-
-     xmlns:hwrservice="using:PhenoPad.HWRService"
+    xmlns:hwrservice="using:PhenoPad.HWRService"
     xmlns:fileservice="using:PhenoPad.FileService"
     xmlns:media="using:Microsoft.Toolkit.Uwp.UI.Media"
     mc:Ignorable="d"
@@ -17,6 +16,28 @@
     Loaded="Page_Loaded">
     <UserControl.Resources>
         <ResourceDictionary>
+            <Storyboard x:Name="curWordPhenoAnimation">
+                <!--<RepositionThemeAnimation 
+                                        Storyboard.TargetName="curWordPhenoControlGrid"
+                                        FromVerticalOffset="120"
+                                         Duration="0:0:0.1"/>-->
+                <DoubleAnimation Storyboard.TargetName="phenoCtrlSlide" 
+                                 Storyboard.TargetProperty="Y"
+                                 By="-45"
+                                 Duration="0:0:0.3" />
+            </Storyboard>
+            <Storyboard x:Name="curWordPhenoHideAnimation">
+
+                <!--<RepositionThemeAnimation 
+                                        Storyboard.TargetName="curWordPhenoControlGrid"
+                                        FromVerticalOffset="100"
+                                         Duration="0:0:0.1"/>-->
+                <DoubleAnimation Storyboard.TargetName="phenoCtrlSlide" 
+                                 Storyboard.TargetProperty="Y"
+                                 By="45"
+                                 Duration="0:0:0.01" />
+            </Storyboard>
+            
             <Flyout x:Key="PhenotypeSelectionFlyout" Placement="Bottom"  Closed="PhenotypeSelectionFlyoutClosed">
             <StackPanel>
                 <TextBox Name="recognizedResultTextBlock" KeyDown="recognizedResultTextBlock_KeyDown" 
@@ -226,7 +247,7 @@
             <!--
             <Grid x:Name="outputGrid" Background="{ThemeResource SystemControlBackgroundChromeWhiteBrush}" Height="{Binding Path=ViewportHeight, ElementName=scrollViewer}" Width="{Binding Path=ViewportWidth, ElementName=scrollViewer}">
             -->
-            <Grid x:Name="outputGrid" Margin="0 70 0 0" Padding="0 0 0 0" Background="{ThemeResource SystemControlBackgroundChromeWhiteBrush}" Height="{x:Bind PAGE_HEIGHT}" Width="{x:Bind PAGE_WIDTH}">
+            <Grid x:Name="outputGrid" Margin="0 10 0 0" Padding="0 100 0 0" Background="{ThemeResource SystemControlBackgroundChromeWhiteBrush}" Height="{x:Bind PAGE_HEIGHT}" Width="{x:Bind PAGE_WIDTH}">
                 <!-- Inking area -->
 
                 <Canvas x:Name="backgroundCanvas" />
@@ -294,27 +315,15 @@
                     <Grid Name="curLineResultPanel" Visibility="Collapsed" Background="White" 
                           BorderBrush="DarkGray" >
                         <Grid.Resources>
-                            <Storyboard x:Name="curWordPhenoAnimation">
-                                <RepositionThemeAnimation 
-                                        Storyboard.TargetName="curWordPhenoControlGrid"
-                                        FromVerticalOffset="120"
-                                         Duration="0:0:0.1"/>
-                            </Storyboard>
-                            <Storyboard x:Name="curWordPhenoHideAnimation">
 
-                                <RepositionThemeAnimation 
-                                        Storyboard.TargetName="curWordPhenoControlGrid"
-                                        FromVerticalOffset="100"
-                                         Duration="0:0:0.1"/>
-                            </Storyboard>
                         </Grid.Resources>
 
                         <Grid x:Name="curWordPhenoControlGrid" Height="40" HorizontalAlignment="Right" 
                               Background="WhiteSmoke"  Padding="5" BorderBrush="LightGray" BorderThickness="0" 
                               CornerRadius="10">
-                            <!--
-                                <customcontrol:PhenotypeControl   x:Name="curWordPhenoControl"  phenotypeName="" phenotypeId="" phenotypeState="-1" sourceType="Notes"></customcontrol:PhenotypeControl>
-                                -->
+                            <Grid.RenderTransform>
+                                <TranslateTransform x:Name="phenoCtrlSlide" Y="0" />
+                            </Grid.RenderTransform>
                             <ListView  Padding="0 0 0 0" IsItemClickEnabled="False"
                                       ScrollViewer.HorizontalScrollMode="Enabled"
                                       ScrollViewer.VerticalScrollMode="Disabled"
@@ -380,6 +389,7 @@
                                     </Style>
                                 </ListView.ItemContainerStyle>
                             </ListView>
+                            
                         </Grid>
 
                         <StackPanel Orientation="Horizontal" Background="WhiteSmoke" CornerRadius="10" 
