--- a/PhenoPad/CustomControl/PhenotypeControl.xaml
+++ b/PhenoPad/CustomControl/PhenotypeControl.xaml
@@ -37,7 +37,7 @@
             <ColumnDefinition Width="50"/>
         </Grid.ColumnDefinitions>
 
-        <Button x:Name="AddBtn" Padding="0" Background="{x:Null}" Grid.Column="0"  
+        <Button x:Name="AddBtn" Padding="0" Background="{x:Null}" Grid.Column="0"  Style="{StaticResource ButtonStyle1}"
                 Click="AddBtn_Click" Width="50" MinWidth="50" MinHeight="25" Height="25">
             <SymbolIcon Symbol="Add"/>
         </Button>
@@ -62,23 +62,25 @@
                     Click="NSwitchBtn_Click" Opacity="1.0" Grid.Column="1" Width="25" Height="25"></Button>
         </Grid>
 
-        <Grid Padding="0 0 0 0" Tapped="NameGrid_Tapped" Name="NameGrid" Grid.Column="1">
-            <RelativePanel  HorizontalAlignment="Stretch" VerticalAlignment="Center">
-                <TextBlock  Margin="5 0 0 0" FontSize="14" Grid.Column="1" x:Name="phenotypeNameTextBlock" Text="" VerticalAlignment="Center" >
+        <Grid Padding="0 0 0 0" Name="NameGrid" Grid.Column="1">
+            <Button Style="{StaticResource ButtonStyle1}" Click="NameGrid_Tapped" Background="Transparent" Height="25" Grid.Column="1"
+                    Padding="0" HorizontalAlignment="Left" HorizontalContentAlignment="Stretch" Width="auto">
+                <RelativePanel  HorizontalAlignment="Stretch" VerticalAlignment="Center">
+                    <TextBlock  Margin="5 0 0 0" FontSize="14" Grid.Column="1" x:Name="phenotypeNameTextBlock" Text="" VerticalAlignment="Center" >
                     <ToolTipService.ToolTip>
                         <TextBlock  x:Name="phenotypeNameTextBlockTooltip" Text="" VerticalAlignment="Center"></TextBlock>
                     </ToolTipService.ToolTip>
                 </TextBlock>
-                <Line RelativePanel.AlignVerticalCenterWith="phenotypeNameTextBlock" 
+                    <Line RelativePanel.AlignVerticalCenterWith="phenotypeNameTextBlock" 
                       RelativePanel.AlignLeftWith="phenotypeNameTextBlock" 
                       RelativePanel.AlignRightWith="phenotypeNameTextBlock" Stretch="Fill" 
                       Stroke="{StaticResource Light_Red}" StrokeThickness="2" X1="1" Y1="0" HorizontalAlignment="Stretch" 
                       VerticalAlignment="Center" Name="NameCrossLine" Visibility="Collapsed"/>
-                
-            </RelativePanel>
-            
-          
-         </Grid>
+
+                </RelativePanel>
+
+            </Button>
+        </Grid>
         <StackPanel Orientation="Horizontal" Grid.Column="2" FlowDirection="RightToLeft">
             <Button Background="Transparent" Style="{StaticResource MyButtonStyle}" RelativePanel.AlignRightWithPanel="True" x:Name="DetailButton"  Grid.Column="2" Foreground="Gray" Click="DetailButton_Click" Width="25" MinWidth="25" MinHeight="25" Height="25" Padding="0">
                 <SymbolIcon Symbol="More"/>
